image and landing page design

--- a/views/center/employee/chak2/employeeChak2.ejs
+++ b/views/center/employee/chak2/employeeChak2.ejs
@@ -108,7 +108,7 @@
 
     $("#wrapper").load( "no url rn",function() {
         
-        var year = new Date().getFullYear();
+        var year = $('#year').val();
         var month = $('#month').val();
 
         $.ajax({
