--- a/views/pd/charaKolomPrice/seasonalFlower/seasonalFlower.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/seasonalFlower.ejs
@@ -77,7 +77,7 @@
     
         $("#wrapper").load( "no url rn",function() {
             
-            var year = new Date().getFullYear();
+            var year = $('#year').val();
             $.ajax({
                 type: "POST",
                 url: "/pd/seasonalFlowerYear",
