--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,7 +8,7 @@
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800" rel="stylesheet">
         
@@ -25,10 +25,8 @@
         <link rel="stylesheet" href="/admin/plugins/owl.carousel/dist/assets/owl.carousel.min.css">
         <link rel="stylesheet" href="/admin/plugins/owl.carousel/dist/assets/owl.theme.default.min.css">
         <link rel="stylesheet" href="/admin/dist/css/theme.min.css">
-
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="/resources/demos/style.css">
-
+        <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+        <link rel="stylesheet" href="/admin/css/custom.css">
         <script src="/admin/src/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
