--- a/views/pd/charaKolomPrice/folMosholla/folMoshollaForm.ejs
+++ b/views/pd/charaKolomPrice/folMosholla/folMoshollaForm.ejs
@@ -24,10 +24,20 @@
                                     </div>
 
                                         
+                                   
                                     <div class="form-group">
-                                        <label for="item" class="col-md-3 control-label">আইটেমের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম">
+                                            <div class="col-md-9">
+                                <label >বাছুন :</label>
+                                <select id="item" name="item" required>
+                                    <option value="">আইটেমের নাম</option>
+                                    <% if (records.length >0){ %>
+                                        <% records.forEach(function (row) { %>
+                                            <option value="<%= row.name %>"><%= row.name %></option>
+                                        <% }) %>
+                                    <% } %>
+                                </select>
+                            </div>
                                         </div>
                                     </div>
                                     
@@ -37,6 +47,7 @@
                                             <input type="text" class="form-control" name="amount" placeholder="পরিমাণ (সংখ্যা/কেজি/লিটার)">
                                         </div>
                                     </div>
+                                    
 
                                     <div class="form-group">
                                         <label for="cholti" class="col-md-3 control-label">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
