--- a/views/pd/charaKolomPrice/summerVeg/summerVegForm.ejs
+++ b/views/pd/charaKolomPrice/summerVeg/summerVegForm.ejs
@@ -25,9 +25,18 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="item" class="col-md-3 control-label">আইটেমের নাম (জাতওয়ারী)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম (জাতওয়ারী)">
+                                            <div class="col-md-9">
+                                <label >বাছুন :</label>
+                                <select id="item" name="item" required>
+                                    <option value="">আইটেমের নাম (জাতওয়ারী)</option>
+                                    <% if (records.length >0){ %>
+                                        <% records.forEach(function (row) { %>
+                                            <option value="<%= row.name %>"><%= row.name %></option>
+                                        <% }) %>
+                                    <% } %>
+                                </select>
+                            </div>
                                         </div>
                                     </div>
                                     
