--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -97,60 +97,39 @@
                             </div>
                         </div>
 
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="form-row">
-                                        <label for="newRajosshoCode" class="col-md-1 control-label"> ছবি আপ্লোড করুন :</label>
-                                        
-                                        <div class="col-md-3">
-                                            <a href="/pd/dashImageForm" class="btn btn-primary">আপ্লোড করুন</a>  
-                                        </div>
+                        <div class="container gallery-container">
+                            <form action="/pd/dashImageFormPost" id="FieldTrialForm" class="form-horizontal" method="post"  role="form" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label >নতুন ছবি আপ্লোড করুন</label>
+                                    <input type="file" id="filename" class="form-control" name="dashImage" required>
                                 </div>
-                            </form>
-                            </div>
+                                            
+                                            
+                         <div class="form-group">
+                                    <!-- Button -->                                        
+                          <div class="col-md-offset-3 col-md-3">
+                            <input type="submit" name="submit" value="আপ্লোড" class="btn btn-primary">   
                         </div>
 
-                        <div class="card">
-                            <div class="card-body">
-                                <%if (dashImage.length >0){ %>
-                                    <div class="container">
-                                      <div class="row">
-                                        <% dashImage.forEach(function(row){ %>
-                                        <div class="col-md-4" >
-                                          <div class="card">
-                                                <img class="card-img-top" src="<%= row.image %>"  width="auto" height="200px" alt="Card image">
-                                                <div class="card-body">
-                                                  <h4 class="card-title"><%= row.name %></h4>
-                                                  <p class="card-text"><%= row.description %></p>
-                                                  <p class="card-text"><%= row.date%></p>
-                                                  <a href="/open/<%= row.id %>" class="btn btn-success" style="text-decoration:none;"><i class="fa fa-search-plus"></i> Open   </a>
-                                                  <a href="/edit/<%= row.id %>" class="btn btn-primary" style="text-decoration:none;"> <i class="fa fa-edit"></i> Edit  </a>
-                                                  <a href="/delete/<%= row.id %>" class="btn btn-danger"  style="text-decoration:none;"> <i class="fa fa-trash"></i> Delete</a>
-                                                </div>
-                                          </div>
-                                        </div>
-                                      
-                                      <% }) %>
+                            
+                            <div class="tz-gallery">
+                                <div class="row">
+                                    <% dashImage.forEach(function(row,index){ %>
+                                    <div class="col-sm-12 col-md-4">
+                                        <a class="lightbox" href="<%= row.image %>">
+                                            <img class="chobi" src="<%= row.image %>">
+                                        </a>
                                     </div>
-                                  </div>
-                                  <% }else{ %>
-                                      <% dashImage.forEach(function(row){ %>
-                                          <div class="container">
-                                              <h2></h2>
-                                              <p></p>
-                                              <div class="card" style="width:400px">
-                                                <img class="card-img-top" src="<%= row.image %>" alt="Card image" style="width:100%">
-                                                <div class="card-body">
-                                                  <h4 class="card-title"> </h4>
-                                                  <p class="card-text">No data Found</p>
-                                                  <a href="#" class="btn btn-primary"></a>
-                                                </div>
-                                              </div>
-                                          </div>
-                                      <% }) %>
-                                  <% } %>
+                                    <% }) %>
+                                    
+                                    
+
+                                </div>
+                        
                             </div>
+                        
                         </div>
+                        
                         
 
                         
@@ -194,3 +173,7 @@
         });
     });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+                        <script>
+                            baguetteBox.run('.tz-gallery');
+                        </script>
