--- a/views/pd/employee/chak2/employeeChak2.ejs
+++ b/views/pd/employee/chak2/employeeChak2.ejs
@@ -15,7 +15,6 @@
                             <div class="card-body">
                                 <div class="row clearfix">
                                     <div class="col-md-3">
-                                        <label >Choose a Center:</label>
                                         <select id="center" name="center" required>
                                             <option value="all">সকল সেন্টারের তথ্য</option>
                                             <% if (centers.length >0){ %>
@@ -43,9 +42,8 @@
                                         </select>
                                     </div>
                                     <div class="col-md-3">
-                                        <label for="year">Choose a year:</label>
+                                        <label for="year">অর্থবছর:</label>
                                         <select id="year" name="year">
-                                            <option value="">Choose year</option>
                                             <option value="2017">২০১৭-১৮</option>
                                             <option value="2018">২০১৮-১৯</option>
                                             <option value="2019">২০১৯-২০</option>
