--- a/views/pd/specialCoconut/specialCoconut.ejs
+++ b/views/pd/specialCoconut/specialCoconut.ejs
@@ -10,9 +10,8 @@
                                 <h1 class="text-center"><%= title %></h1>
                             </div>
                             <div class="col-md-4">
-                                <label >Choose a Center:</label>
                                 <select id="center" name="center" required>
-                                    <option value="">Choose center</option>
+                                    <option value="">সকল সেন্টারের তথ্য</option>
                                     <% if (centers.length >0){ %>
                                         <% centers.forEach(function (center) { %>
                                             <option value="<%= center.id %>"><%= center.center %></option>
