--- a/views/pd/topSheet/topSheet.ejs
+++ b/views/pd/topSheet/topSheet.ejs
@@ -53,7 +53,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblexportData', 'টপশীট')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblCustomers', 'টপশীট')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
