--- a/views/center/apa/apaForm.ejs
+++ b/views/center/apa/apaForm.ejs
@@ -22,7 +22,14 @@
                                         <p>Error:</p>
                                         <span></span>
                                     </div>
-
+                                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                                      
                                     <div class="form-row mb-4">
                                         <div class="col">
@@ -164,7 +171,10 @@
                                         </div>
                                     </div>
                                     
-                                    
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/center/apa" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
                                         
                                     
                                 </form>
