--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -16,6 +16,7 @@
                                     <% } %>
                                 </p>
                                 </div>  
+                                
                             <div class="panel-body" >
                                 <form action="/center/chak1Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
@@ -23,7 +24,14 @@
                                         <span></span>
                                     </div>
 
-                                        
+                                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">হরটিকালচার সেন্টারের নাম</label>
                                         <div class="col-md-9">
@@ -141,7 +149,10 @@
                                         </div>
                                     </div>
                                     
-                                    
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/center/chak1" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
                                         
                                     
                                 </form>
