--- a/views/center/employee/chak2/employeeChak2Form.ejs
+++ b/views/center/employee/chak2/employeeChak2Form.ejs
@@ -22,7 +22,14 @@
                                         <p>Error:</p>
                                         <span></span>
                                     </div>
-
+                                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                                     <div class="form-group">
                                         <label for="name" class="col-md-3 control-label">পদের নাম</label>
                                         <div class="col-md-9">
@@ -118,6 +125,10 @@
                                         </div>
                                     </div>
                                     
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/center/chak2" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
                                     
                                         
                                     
