--- a/views/center/rajossho/rajosshoForm.ejs
+++ b/views/center/rajossho/rajosshoForm.ejs
@@ -24,7 +24,14 @@
                                     </div>
 
                                         
-                                    
+                                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                                     
                                     <div class="form-group">
                                         <label for="upokhat" class="col-md-3 control-label">উপ-খাতের নাম</label>
@@ -161,7 +168,10 @@
                                     </div>
                                     
                                     
-                                        
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/center/rajossho" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
                                     
                                 </form>
                             </div>
