--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
                         
                 </div>
 
-                <button>Download</button>
+                <a href="/demoPdf">Download</a>
                 <h1 class="text-center">হর্টিকালচার উইং এর সেন্টার ম্যানেজমেন্ট সফটওয়্যারে আপনাকে স্বাগতম</h1>
                 <h3>
                     দেশের ১৬ কোটি মানুষের খাদ্য নিরাপত্তা নিশ্চিতকরন ও পুষ্টি সমস্যা সমাধান, মানব সম্পদ উন্নয়ন, কর্মসংস্থান সৃষ্টি, দারিদ্র দূরীকরণ, নারীর ক্ষমতায়ন, জলবায়ুর বিরূপ প্রভাব মোকাবেলায় লাগসই প্রযুক্তি প্রয়োগ, পরিবেশ বান্ধব কৃষি, উচ্চ মূল্য ফসল উৎপাদন ও রপ্তানীমুখী কৃষি পন্য উৎপাদনে কৃষক ও উদ্যোক্তাদের চাহিদামাফিক সেবা প্রদানের লক্ষে গণপ্রজাতন্ত্রী বাংলাদেশ সরকারের কৃষি মন্ত্রনালয়ের আওতাধীন কৃষি সম্প্রসারণ অধিদপ্তরের হর্টিকালচার উইং সুনির্দিষ্ট কর্মপকিল্পনা নিয়ে কাজ করে যাচ্ছে। <br>
