--- a/views/pd/employee/chak1/employeeChak1.ejs
+++ b/views/pd/employee/chak1/employeeChak1.ejs
@@ -93,7 +93,7 @@
         var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
         
         // Specify file name
-        filename = filename?filename+'.xls':'export_excel_data.xls';
+        filename = filename?filename+'.xlsx':'export_excel_data.xlsx';
         
         // Create download link element
         downloadurl = document.createElement("a");
