--- a/views/pd/employee/chak2/employeeChak2.ejs
+++ b/views/pd/employee/chak2/employeeChak2.ejs
@@ -72,7 +72,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'ছকপ্ত্র-খ')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'ছকপ্ত্র-খ')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
