--- a/views/pd/specialCoconut/specialCoconut.ejs
+++ b/views/pd/specialCoconut/specialCoconut.ejs
@@ -47,7 +47,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'বিশেষ নারিকেল')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'বিশেষ নারিকেল')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
