--- a/views/pd/apa/apa.ejs
+++ b/views/pd/apa/apa.ejs
@@ -46,7 +46,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'এপিএ')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'এপিএ')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
