--- a/views/pd/expense/expense.ejs
+++ b/views/pd/expense/expense.ejs
@@ -46,7 +46,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'খরচ')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'খরচ')" class="btn btn-success">Export Table Data To Excel File</button>
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
