--- a/views/pd/monthlyProgress/monthlyProgress.ejs
+++ b/views/pd/monthlyProgress/monthlyProgress.ejs
@@ -59,7 +59,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'মাসিক প্রতিবেদন')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'মাসিক প্রতিবেদন')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
