--- a/views/pd/worker/workerInfo/workerInfoTable.ejs
+++ b/views/pd/worker/workerInfo/workerInfoTable.ejs
@@ -31,7 +31,7 @@
     </tbody>
 </table>
 <% }else{ %>
-    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
             <th>ক্রমিক নং</th>
