--- a/views/pd/worker/workerNum/workerNum.ejs
+++ b/views/pd/worker/workerNum/workerNum.ejs
@@ -72,7 +72,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
-                        <button onclick="exportToExcel('tblCustomers', 'অনিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+                        <button onclick="exportToExcel('tblexportData', 'অনিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
                         <div id="output"></div>
