--- a/views/pd/worker/workerNum/workerNumTable.ejs
+++ b/views/pd/worker/workerNum/workerNumTable.ejs
@@ -1,5 +1,5 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
         <th>নিয়মিত শ্রমিকের সংখ্যা</th>
